# robust_bond_portfolio

./: .pre-commit-config.yaml  README.md  run_examples.py  setup.cfg
.github/workflows/: linter.yml
data/: mean_spreads.csv  mean_yields.csv  s_nominal.csv
src/: full_example.py  robust_optimization.py
tests/: test_snippets.py
