[metadata]
name = robust_bond_portfolio
version = 0.1.0
author = Eric Luxenberg, Philipp Schiele, Stephen Boyd
author_email = ericlux@stanford.edu, philipp.schiele@stat.uni-muenchen.de, boyd@stanford.edu
url = https://github.com/cvxgrp/robust_bond_portfolio
description = Robust Bond Portfolio Construction via Convex-Concave Saddle Point Optimization
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0

[options]
package_dir=
    =src
packages = find:
install_requires =
    cvxpy
    numpy
    scipy
    matplotlib
    pandas
    seaborn
    mosek
    dsp-cvxpy
zip_safe = True
include_package_data = True

[options.extras_require]
DSP =
    dsp

[options.package_data]
* = README.md

[flake8]
max-line-length = 100